// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the request is branched by the @endpoint directive, and the cache key is separated 1`] = `
{
  "data": {
    "users": [
      {
        "__typename": "User",
        "email": "alice@example.com",
        "id": "1",
        "name": "Alice",
      },
      {
        "__typename": "User",
        "email": "bob@example.com",
        "id": "2",
        "name": "Bob",
      },
      {
        "__typename": "User",
        "email": "charlie@example.com",
        "id": "3",
        "name": "Charlie",
      },
    ],
  },
  "loading": false,
  "networkStatus": 7,
}
`;

exports[`the request is branched by the @endpoint directive, and the cache key is separated 2`] = `
{
  "data": {
    "users": [
      {
        "__typename": "User",
        "id": "1",
        "login": "alice",
        "name": "Alice",
      },
      {
        "__typename": "User",
        "id": "2",
        "login": "bob",
        "name": "Bob",
      },
      {
        "__typename": "User",
        "id": "3",
        "login": "charlie",
        "name": "Charlie",
      },
    ],
  },
  "loading": false,
  "networkStatus": 7,
}
`;

exports[`the request is branched by the @endpoint directive, and the cache key is separated 3`] = `
{
  "__typename": "User",
  "email": "alice@example.com",
  "id": "1",
  "name": "Alice",
}
`;

exports[`the request is branched by the @endpoint directive, and the cache key is separated 4`] = `
{
  "__typename": "User",
  "id": "1",
  "login": "alice",
  "name": "Alice",
}
`;

exports[`the request is branched by the @endpoint directive, and the cache key is separated 5`] = `
{
  "users": [
    {
      "__typename": "User",
      "email": "alice@example.com",
      "id": "1",
      "name": "Alice",
    },
    {
      "__typename": "User",
      "email": "bob@example.com",
      "id": "2",
      "name": "Bob",
    },
    {
      "__typename": "User",
      "email": "charlie@example.com",
      "id": "3",
      "name": "Charlie",
    },
  ],
}
`;

exports[`the request is branched by the @endpoint directive, and the cache key is separated 6`] = `
{
  "users": [
    {
      "__typename": "User",
      "id": "1",
      "login": "alice",
      "name": "Alice",
    },
    {
      "__typename": "User",
      "id": "2",
      "login": "bob",
      "name": "Bob",
    },
    {
      "__typename": "User",
      "id": "3",
      "login": "charlie",
      "name": "Charlie",
    },
  ],
}
`;

exports[`the request is branched by the @endpoint directive, and the cache key is separated 7`] = `
{
  "default": {
    "ROOT_QUERY": {
      "__typename": "Query",
      "users": [
        {
          "__ref": "User:1",
        },
        {
          "__ref": "User:2",
        },
        {
          "__ref": "User:3",
        },
      ],
    },
    "User:1": {
      "__typename": "User",
      "email": "alice@example.com",
      "id": "1",
      "name": "Alice",
    },
    "User:2": {
      "__typename": "User",
      "email": "bob@example.com",
      "id": "2",
      "name": "Bob",
    },
    "User:3": {
      "__typename": "User",
      "email": "charlie@example.com",
      "id": "3",
      "name": "Charlie",
    },
  },
  "namespaced": {
    "graph2": {
      "ROOT_QUERY": {
        "__typename": "Query",
        "users": [
          {
            "__ref": "User:1",
          },
          {
            "__ref": "User:2",
          },
          {
            "__ref": "User:3",
          },
        ],
      },
      "User:1": {
        "__typename": "User",
        "id": "1",
        "login": "alice",
        "name": "Alice",
      },
      "User:2": {
        "__typename": "User",
        "id": "2",
        "login": "bob",
        "name": "Bob",
      },
      "User:3": {
        "__typename": "User",
        "id": "3",
        "login": "charlie",
        "name": "Charlie",
      },
    },
  },
}
`;
